fix aligning primary heading by replacing min-width with flex 1

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -23,7 +23,7 @@
 }
 
 @mixin header_sides {
-  min-width: 12rem;
   display: flex;
   align-items: center;
+  flex: 1;
 }
