--- a/src/styles/components/_theme-switch.scss
+++ b/src/styles/components/_theme-switch.scss
@@ -1,6 +1,7 @@
 .theme-switch-wrapper {
   @include header_sides;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: $gap-sm;
   font-size: 2.4rem;
   color: var(--text-color, #222);
   line-height: var(--theme-switch-height);
